--- a/141lab2/lab2.qsf
+++ b/141lab2/lab2.qsf
@@ -57,4 +57,10 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name BDF_FILE lab2.bdf
 set_global_assignment -name SYSTEMVERILOG_FILE testbench.sv
+set_global_assignment -name SYSTEMVERILOG_FILE alu.sv
+set_global_assignment -name SYSTEMVERILOG_FILE alu_testbench.sv
+set_global_assignment -name SYSTEMVERILOG_FILE fetch_unit.sv
+set_global_assignment -name SYSTEMVERILOG_FILE rom.sv
+set_global_assignment -name SYSTEMVERILOG_FILE fetch_unit_testbench.sv
+set_global_assignment -name SYSTEMVERILOG_FILE rom_testbench.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
