--- a/141lab2/lab2.qsf
+++ b/141lab2/lab2.qsf
@@ -63,4 +63,8 @@ set_global_assignment -name SYSTEMVERILOG_FILE fetch_unit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE rom.sv
 set_global_assignment -name SYSTEMVERILOG_FILE fetch_unit_testbench.sv
 set_global_assignment -name SYSTEMVERILOG_FILE rom_testbench.sv
+set_global_assignment -name SYSTEMVERILOG_FILE decoder.sv
+set_global_assignment -name SYSTEMVERILOG_FILE mux.sv
+set_global_assignment -name VERILOG_FILE datamem.v
+set_global_assignment -name SYSTEMVERILOG_FILE totalTestBench.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
